moving suggestions to discussion

--- a/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
@@ -1,76 +1,82 @@
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
-    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really){#toc-the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really}
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
-        2024](#research-questions---march-2024){#toc-research-questions---march-2024}
-        -   [Word count](#word-count){#toc-word-count}
-    -   [Introduction](#introduction){#toc-introduction}
+        2024](#research-questions---march-2024)
+        -   [Word count](#word-count)
+    -   [Introduction](#introduction)
+    -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
-            2](#descriptive-commentary-on-vignette-2){#toc-descriptive-commentary-on-vignette-2}
+            2](#descriptive-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
-        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity){#toc-use-of-gdps-in-the-cultural-plane-community-level-of-activity}
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others){#toc-the-role-of-gdps-to-facilitate-learners-to-design-for-others}
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
             -   [GDP concepts and language used in informal feedback for
                 peers to influence modification of games (developing
                 community norms)
-                -](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--){#toc-gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--}
+                -](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--)
         -   [GDPs facilitate the use of wider funds of knowledge /
-            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest){#toc-gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest}
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Evolution and propagation of GDPs concepts during
-            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting){#toc-evolution-and-propagation-of-gdps-concepts-during-playtesting}
-        -   [Perhaps add here a summary of cultural section if
-            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful){#toc-perhaps-add-here-a-summary-of-cultural-section-if-useful}
-    -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation){#toc-gdps-used-in-the-process-of-guided-participation}
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+        -   [Perhaps add here a very brief summary of cultural section
+            if
+            useful](#perhaps-add-here-a-very-brief-summary-of-cultural-section-if-useful)
+    -   [GDPs used in the process of guided participation (Target
+        2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
             suggested options, offer the potential to assist project
             navigation, acting as a framework for code examples and
-            step-by-step
-            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials){#toc-gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials}
+            step-by-step tutorials
+            (600)](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials-600)
         -   [GDPs used to scaffold ideation and organisation processes
-            (800)](#gdps-used-to-scaffold-ideation-and-organisation-processes-800){#toc-gdps-used-to-scaffold-ideation-and-organisation-processes-800}
+            (800)](#gdps-used-to-scaffold-ideation-and-organisation-processes-800)
             -   [Knowledge of game design patterns used to stimulate and
                 communicate new
-                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas){#toc-knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas}
+                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
             -   [The use of GDPs to encourage intuitive and visual
-                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping){#toc-the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping}
+                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
         -   [GDPs aiding the process of organisation and division of
             labour
-            (2000)](#gdps-aiding-the-process-of-organisation-and-division-of-labour-2000){#toc-gdps-aiding-the-process-of-organisation-and-division-of-labour-2000}
-            -   [Working knowledge of different types of GDPs can help
-                participants to divide project elements by
-                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern){#toc-working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern}
-            -   [Structuring work processes through implementing modular
-                sub-projects in the form of GDPs can aid division of
-                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour){#toc-structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour}
+            (1400)](#gdps-aiding-the-process-of-organisation-and-division-of-labour-1400)
         -   [Discussion on division of labour in the video
-            data](#discussion-on-division-of-labour-in-the-video-data){#toc-discussion-on-division-of-labour-in-the-video-data}
-        -   [The role of GDP used in emerging technical
-            processes](#the-role-of-gdp-used-in-emerging-technical-processes){#toc-the-role-of-gdp-used-in-emerging-technical-processes}
+            data](#discussion-on-division-of-labour-in-the-video-data)
+        -   [The role of GDP used in emerging technical processes
+            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes){#toc-the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes}
-    -   [Discussion](#discussion){#toc-discussion}
-        -   [Concrete and relatable levels of abstraction - linking this
-            communities experiences with existing
-            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature){#toc-concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature}
-        -   [Design patterns as a intermediate-level, pedagogical
-            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework){#toc-design-patterns-as-a-intermediate-level-pedagogical-framework}
+        processes (500 - Target
+        750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
+    -   [Discussion](#discussion)
+        -   [Discussion of findings in relation to CHAT conceptions of
+            abstraction](#discussion-of-findings-in-relation-to-chat-conceptions-of-abstraction)
+        -   [Discussion of findings in relation to Computational
+            Thinking and
+            abstraction](#discussion-of-findings-in-relation-to-computational-thinking-and-abstraction)
+            -   [Design patterns as a intermediate-level, pedagogical
+                framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
+            -   [Concrete and relatable levels of abstraction - linking
+                this communities experiences with existing
+                literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
+            -   [Synthesis between intermediate and
+                empirical/theoretical
+                perspectives.](#synthesis-between-intermediate-and-empiricaltheoretical-perspectives.)
+        -   [A discussion of aspects of culture, home interests and
+            evolving participation in an
+            idioculture](#a-discussion-of-aspects-of-culture-home-interests-and-evolving-participation-in-an-idioculture)
         -   [Implications and beginnings of suggestions for
-            practitioners
-            -](#implications-and-beginnings-of-suggestions-for-practitioners--){#toc-implications-and-beginnings-of-suggestions-for-practitioners--}
+            practitioners to support inclusive pedagogical approach
+            -](#implications-and-beginnings-of-suggestions-for-practitioners-to-support-inclusive-pedagogical-approach--)
+            -   [Returning to some of the tensions explore in the last
+                chapter.](#returning-to-some-of-the-tensions-explore-in-the-last-chapter.)
             -   [Tensions between facilitating agency and norming
-                practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
-                AS A LINK TO NEXT CHAPTER IN CONCLUSION
-                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion){#toc-tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion}
-    -   [Chapter
-        Conclusion](#chapter-conclusion){#toc-chapter-conclusion}
-        -   [Simple table of
-            uses](#simple-table-of-uses){#toc-simple-table-of-uses}
-        -   [Summary of the pedagogical opportunities of Game Design
-            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns){#toc-summary-of-the-pedagogical-opportunities-of-game-design-patterns}
-        -   [Transition to next
-            chapter](#transition-to-next-chapter){#toc-transition-to-next-chapter}
-    -   [MOVED FROM
-        INTRODUCTION](#moved-from-introduction){#toc-moved-from-introduction}
+                practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND
+                CLOSING OFF
+                GDPS](#tensions-between-facilitating-agency-and-norming-practices---rewrite-as-a-way-of-opening-this-topic-and-closing-off-gdps)
+        -   [Simple table of uses](#simple-table-of-uses)
+    -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Summary of the uses of Game Design
+            Patterns](#summary-of-the-uses-of-game-design-patterns)
+        -   [Transition to next chapter](#transition-to-next-chapter)
+    -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
-            PARTICIPATION](#moved-from-guided-participation){#toc-moved-from-guided-participation}
+            PARTICIPATION](#moved-from-guided-participation)
