--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -14,7 +14,9 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
-    -   [Chapter outline](#chapter-outline)
+        -   [Word count](#word-count)
+    -   [Introduction](#introduction)
+    -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
             2](#descriptive-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
@@ -25,77 +27,71 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
                 peers to influence modification of games (developing
                 community norms)
                 -](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--)
-        -   [Evolution and propagation of GDPs concepts during
-            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
         -   [GDPs facilitate the use of wider funds of knowledge /
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
-        -   [Perhaps add here a summary of cultural section if
-            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
-    -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+        -   [Perhaps add here a very brief summary of cultural section
+            if
+            useful](#perhaps-add-here-a-very-brief-summary-of-cultural-section-if-useful)
+    -   [GDPs used in the process of guided participation (Target
+        2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
             suggested options, offer the potential to assist project
             navigation, acting as a framework for code examples and
-            step-by-step
-            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-        -   [GDPs used to scaffold ideation
-            processes](#gdps-used-to-scaffold-ideation-processes)
+            step-by-step tutorials
+            (600)](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials-600)
+        -   [GDPs used to scaffold ideation and organisation processes
+            (800)](#gdps-used-to-scaffold-ideation-and-organisation-processes-800)
             -   [Knowledge of game design patterns used to stimulate and
                 communicate new
                 ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
             -   [The use of GDPs to encourage intuitive and visual
                 prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
-            -   [GDPs as used by participants in their prioritisation in
-                the ideation
-                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
-        -   [GDPs aiding the process of division of
-            labour](#gdps-aiding-the-process-of-division-of-labour)
-            -   [Working knowledge of different types of GDPs can help
-                participants to divide project elements by
-                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
-            -   [Structuring work processes through implementing modular
-                sub-projects in the form of GDPs can aid division of
-                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
-            -   [Other notable observations concerning division of
-                labour in the video
-                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
-        -   [The role of GDP used in emerging technical
-            processes](#the-role-of-gdp-used-in-emerging-technical-processes)
-            -   [Use of GDPs to facilitate use of
-                tools](#use-of-gdps-to-facilitate-use-of-tools)
-            -   [Diverse use of technical processes driven by
-                GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
-            -   [Use of GDPs in the development of shared
-                language](#use-of-gdps-in-the-development-of-shared-language)
-            -   [Code Patching as a guided
-                process](#code-patching-as-a-guided-process)
-            -   [GDPs used to nurture tactical responses to coding
-                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
-            -   [Concluding remarks on debugging and
-                revision](#concluding-remarks-on-debugging-and-revision)
+        -   [GDPs aiding the process of organisation and division of
+            labour
+            (1400)](#gdps-aiding-the-process-of-organisation-and-division-of-labour-1400)
+        -   [Discussion on division of labour in the video
+            data](#discussion-on-division-of-labour-in-the-video-data)
+        -   [The role of GDP used in emerging technical processes
+            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        processes (500 - Target
+        750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
     -   [Discussion](#discussion)
-        -   [Concrete and relatable levels of abstraction - linking this
-            communities experiences with existing
-            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
-        -   [Design patterns as a intermediate-level, pedagogical
-            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
+        -   [Discussion of findings in relation to CHAT conceptions of
+            abstraction](#discussion-of-findings-in-relation-to-chat-conceptions-of-abstraction)
+        -   [Discussion of findings in relation to Computational
+            Thinking and
+            abstraction](#discussion-of-findings-in-relation-to-computational-thinking-and-abstraction)
+            -   [Design patterns as a intermediate-level, pedagogical
+                framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
+            -   [Concrete and relatable levels of abstraction - linking
+                this communities experiences with existing
+                literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
+            -   [Synthesis between intermediate and
+                empirical/theoretical
+                perspectives.](#synthesis-between-intermediate-and-empiricaltheoretical-perspectives.)
+        -   [A discussion of aspects of culture, home interests and
+            evolving participation in an
+            idioculture](#a-discussion-of-aspects-of-culture-home-interests-and-evolving-participation-in-an-idioculture)
         -   [Implications and beginnings of suggestions for
-            practitioners - IS THIS FOR THE CONCLUSION? OR MERGE SOME
-            UP - WITHIN THE SECTION THAT THEY REFER
-            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to)
+            practitioners to support inclusive pedagogical approach
+            -](#implications-and-beginnings-of-suggestions-for-practitioners-to-support-inclusive-pedagogical-approach--)
+            -   [Returning to some of the tensions explore in the last
+                chapter.](#returning-to-some-of-the-tensions-explore-in-the-last-chapter.)
             -   [Tensions between facilitating agency and norming
-                practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
-                AS A LINK TO NEXT CHAPTER IN CONCLUSION
-                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion)
-    -   [Chapter Conclusion](#chapter-conclusion)
+                practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND
+                CLOSING OFF
+                GDPS](#tensions-between-facilitating-agency-and-norming-practices---rewrite-as-a-way-of-opening-this-topic-and-closing-off-gdps)
         -   [Simple table of uses](#simple-table-of-uses)
-        -   [Summary of the pedagogical opportunities of Game Design
-            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+    -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Summary of the uses of Game Design
+            Patterns](#summary-of-the-uses-of-game-design-patterns)
         -   [Transition to next chapter](#transition-to-next-chapter)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
-
+        -   [MOVED FROM GUIDED
+            PARTICIPATION](#moved-from-guided-participation)
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -1209,6 +1205,27 @@ In its engagement with participant choice over which patterns to implement, and 
 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
+
+#### Returning to some of the tensions explore in the last chapter.
+
+#### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
+
+<!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
+
+
+This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.  While the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
+
+IS THIS A TENSION WORTH HIGHLIGHTING MORE CLEARLY?
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. IS THIS EXPLORED IN THE NEXT CHAPTER?
+The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
+
+<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
+<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
+
+SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
+
+
+
 ### Simple table of uses
 
 | Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
@@ -1242,24 +1259,6 @@ We can frame how these process contribute to the development of agency on the pa
 
 
 These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
-
-#### Returning to some of the tensions explore in the last chapter. 
-
-#### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
-
-<!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
-
-
-This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.  While the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
-
-IS THIS A TENSION WORTH HIGHLIGHTING MORE CLEARLY?
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. IS THIS EXPLORED IN THE NEXT CHAPTER?
-The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
-
-<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
-<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
-
-SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 ### Transition to next chapter
 
