--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1237,11 +1237,14 @@ SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 | GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
 PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW.
 
+#### Full table of GDP use with supporting evidence
+
 The use of GDPs by participants on now presented in summary via in table form.
 
 SUMMARY TABLE HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
+ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case study / session analysed.  
 
 ## Chapter Conclusion
 
