--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1241,6 +1241,13 @@ PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW.
 
 The use of GDPs by participants on now presented in summary via in table form.
 
+The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendieces where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 in-depth session transcriptions the behaviour was found within.
+
+It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
+<!-- Instead the potential of this learning design is of most value.   -->
+
+
+
 SUMMARY TABLE HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
