--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -126,38 +126,30 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 
 ## Introduction
 
-
-
-<!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
+<!-- This chapter was building towards a Matrix that could be included in the next or a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 
-and the GDP elements can be represented as table here
-
+and the uses of  GDP will can be represented as table
+a draft is here
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
-Also the RQ questions which answered
-https://docs.google.com/document/d/1RZnznbR4HKrgL8VFfIqoCrCAJM0mf_sM8iEN4KCGeZ4/edit
-
-And the coding structure here
-https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
+-->
 
 
 <!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. This chapter centres on an interpretation of the varied uses of gameplay design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
+In the last chapter I outlined the evolution of tool use focusing on emerging tensions in activity. This chapter increases focus on participant perspective, using recorded data to make an interpretation of the varied uses of gameplay design patterns (GDPs) and in doing so addresses the research question - _how can game design patterns support the development of coding practices by novices_?
 
 
 <!-- Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community.  -->
 
 _Recap on design patterns and game design patterns_
 
-In chapter two the use of design patterns in an education context were summarised. While existing research on the use of game design patterns in educational settings exists, specifically, to aid aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work  [@eriksson_using_2019], little exists which addresses their use to overcome challenges in participation in an emerging community of game making using text coding.  
-
-<!-- to help deepen the knowledge of participants and provide a shared language to help collaborative design -->
+In chapter two the use of design patterns in an education context were summarised. While existing research on the use of game design patterns in educational settings exists, specifically, to aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work  [@eriksson_using_2019], little exists which addresses their use to overcome challenges in participation in an emerging community of game making using text coding.  
 
 
-  <!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
+<!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
   <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
@@ -217,6 +209,22 @@ In previous chapter on methodology we (will) have examined the coding scheme use
 
 The resulting coding structure is available online here.
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
+
+
+Outer pipes Cell padding
+
+| Suzanna: I’ll reload it. Here you go                                                                                                                                                                                                                                                                                  | Suzanna presses refresh key to reload the preview  game view to reflect the changes that have just been made. |
+| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------- |
+| Olivia: Laughs                                                                                                                                                                                                                                                                                                        | Olivia moves laptop to point towards her and takes over using the keyboard                                    |
+| ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXdbBLx7bPs95968MajDa3VWAUCAp1jPiTcL96iD-YRLMVGf6rCoygDF_c4n4LqZl4Gp_iAu-W17vHpumhkEeway-Uab-0wC_06qE0q9yebGiNVCf2DQlbw5RPbJDc8whRcNS7LLYqTQOLvXZaFe1mzkO24?key=WwYhhFgd0-gHsomX3t0R_g)                                                                            |
+| On the Screen: Olivia is uses the keyboard’s arrow keys to control the game player. She checks the desired behaviour of the player progressing to level 2 after collecting a key and then traveling to a door - is working. It does and Olivia  progresses to level 2 of their game where there is not a door or key. |
+
+
+
+tested
+
+
+
 
 
 ### Descriptive Commentary on Vignette 2
