--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -132,62 +132,35 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 and the uses of  GDP will can be represented as table
 a draft is here
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
-
 -->
-
 
 <!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-In the last chapter I outlined the evolution of tool use focusing on emerging tensions in activity. This chapter increases focus on participant perspective, using recorded data to make an interpretation of the varied uses of gameplay design patterns (GDPs) and in doing so addresses the research question - _how can game design patterns support the development of coding practices by novices_?
+In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. This chapter shifts focus to the perspectives of participants, using recorded data to interpret the varied applications of gameplay design patterns (GDPs). In doing so, it addresses the research question: How can game design patterns support the development of coding practices by novices? Chapter two summarised the use of design patterns in educational contexts. While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. The last chapter investigated iterative activity involving alterations to games at the level of gameplay design patterns as part of the mutual evolution of learning design. This evolution encompassed various forms, including supporting resources such as code examples, instructional tutorials and quick-start activities proposing micro-level code modifications. This chapter builds on that analysis, focusing on the use of GDPs in diverse mediational strategies, not only within facilitator-provided resources and scaffolds but also as part of emerging community practices and interpersonal repertoires. During data analysis, GDPs appeared in such diverse and significant forms that they became candidates for a germ cell concept.
+
+Regarding the structure of this chapter, it begins with a vignette of parent-child interaction during the game-making process to contextualise the findings that follow. The chapter then presents a systematic analysis of participants’ varied uses of game design patterns, drawing on detailed observations of recorded video data. For this analysis, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter four. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. These sections focus on how gameplay design patterns are utilised by parents, children and facilitators, each through the lens of the respective analytical plane. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts. This discussion considers the examples of GDP use in practice to analyse GDPs as a mid-level construct, demonstrating their utility for both educational designers and researchers.
+
+<!--
+_extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_ -->
 
 
-<!-- Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community.  -->
+<!-- NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE UNITS OF ANALYIS . -->
 
-_Recap on design patterns and game design patterns_
-
-In chapter two the use of design patterns in an education context were summarised. While existing research on the use of game design patterns in educational settings exists, specifically, to aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work  [@eriksson_using_2019], little exists which addresses their use to overcome challenges in participation in an emerging community of game making using text coding.  
-
-
-<!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
-  <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
-<!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
-
-
-_extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_
-
-The last chapter explored the activity of iteratively of altering a game at the level of gameplay design pattern as one part of the mutual evolution of the learning design in varied forms including;  supporting resources, in the form of a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification.
-AND?  provided support processes.
+<!-- The following sections explore the variety of uses. A final section of this chapter analysis how this proposition of GDP as germ cell fits within a CHAT analysis.    -->
 
 
 <!-- These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers -->
 
 <!-- While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means.  -->
 
-This chapter develops analysis of GDPs used in diverse meditational strategies not only as part of facilitator-provided resources and scaffolds but as part of emerging community practices and interpersonal repertoires. During data analysis, these uses of GDPs emerged as so important in varied forms that they became a candidate for a germ cell concepts.
+<!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
+  <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
+<!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
-<!-- The following sections explore the variety of uses. A final section of this chapter analysis how this proposition of GDP as germ cell fits within a CHAT analysis.    -->
+## Initial broad commentary on Vignette 2
 
-
-_Structure of the chapter around 3 planes / activity system scopes_
-
-
-To analyse and present findings from recorded data, I have draw on Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in Chapter 4. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
-
-The sections focus on analysis of use of design patterns are used by parents, children and facilitators at using the three different foci. There is an analogy between analysis using these three planes and analysis of activity systems at larger or smaller scopes. More explicitly, the cultural plane can be compared to the community scope of activity described in the previous chapter in Figure 5.x and interpersonal and personal planes with the smaller scope in Figure 5.x
-
-
-<!-- NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE UNITS OF ANALYIS . -->
-
-This chapter begins with re-examining of game play design patterns as a unit of analysis for this research. Following this a vignette of parent child interaction in game making process helps contextualise findings. The chapter then undertakes a systematic analysis of varied uses of game design patterns by participants drawing on detailed observations of practice in recorded video data. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part of this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to educational designers and researchers.
-
-
-## Study of Vignette 2
-
-
-In this section, to give an overview of the specifics of the learning design, and participant interactions I use vignette to give a snapshot of the interactions of one family. This comprises a table of participant dialogue, screenshots and description of their interactions including gestures followed by a summary interpretation of interactions.
-
-_Context:_ For the previous ten minutes the parent and child dyad have struggled a tutorial chapter in the text book  included as appendix 5.x. on adding the pattern of keys and doors ( players must collect a key and then navigate to a door to progress to the next level). The parent Suzanna has been making multiple changes to the code while the child Olivia has been expressing boredom. Suzanna suggests that Olivia asks the facilitator Mick for help to resolve the coding problem and after help has been given to solve the bug Suzanna cedes the keyboard to Olivia to test the working game.
+In this section, I provide an overview of the specifics of the learning design and participant interactions. To achieve this, I use a vignette to capture a snapshot of the interactions within one family, as it includes several aspects of activity that incorporate the use of GDP concepts. A truncated table presents participant dialogue, screenshots and a description of their interactions, including gestures, followed by a summary interpretation of these interactions. A more extended extract of dialogue, activity description and commentary is available in Vignette 2 in the appendices. For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the textbook, included as Appendix 5.x, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game.
 
 <!-- INSERT VIGNETTE TABLE HERE
 https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/edit -->
@@ -220,29 +193,13 @@ Outer pipes Cell padding
 | On the Screen: Olivia is uses the keyboard’s arrow keys to control the game player. She checks the desired behaviour of the player progressing to level 2 after collecting a key and then traveling to a door - is working. It does and Olivia  progresses to level 2 of their game where there is not a door or key. |
 
 
-
-tested
-
-
-
-
-
 ### Descriptive Commentary on Vignette 2
 
-MOVE A LOT OF THIS TO THE APPENDIX - CREATE A SUMMARY HERE.
+Beyond providing the reader with an illustrative example of partner work in game coding, this commentary has a primary focus on surfacing uses of GDPs as a meditational strategy, which are then explored using wider data in the rest of the chapter.
 
-<!-- PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY? -->
+The child(c) Olivia uses the name of game design pattern they are working in _Keys and Doors_ is repeated in a sing song voice . She also chivvies her parent(p) Suzanna to get started on it (Key. in Vignette 2.).
 
-<!-- **Describing on a level of personal** -->
-
-
-As a summary of activity not related specifically to GDPs : use of child to get help, legitimate peripheral participant of child, elements and use of supporting documentation.
-
-These aspects are analysed in both the vignette 2 and in Chapter 7 with reference to participant agency.
-
-This commentary continues restricted to surfacing aspecs of use of GDPs as a mediational strategy, which are then explored using wider data in the rest of the chapter.
-
-The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child. She also chivvies the mother to get started on it (Key. in Vignette 2.).
+There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key. in Vignette 2.).
 
 The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
 
@@ -274,10 +231,7 @@ In the full vignette transcription included in the appendices as Vignette 2, the
 
 <!-- DIVISION ON LABOUR HERE - POSSIBLE DUPLICATE? -->
 
-
 <!-- **Cultural:**  -->
-
-
 <!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
 
 <!--
@@ -298,8 +252,6 @@ PULL OUT AN EXAMPLE -->
 NOTE - SOME MORE READING ON AN INTERPRETATION OF THIS THAT I CAN WORK WITH FOR THIS DATA IS PERHAPS NEEDED. -->
 
 
-
-
 <!-- The child uses her concepts of game design patterns in the end of course evaluation. She responded to the question _What would you like to see next time? What would you add?_ with the comment. "Olivia: I'd add a health bar and lots more levels and keep on changing the characters and background." -->
 <!--
 #### TO INTEGRATE - Sustaining Engagement: Parental prompts aligned with ideation stages
@@ -309,10 +261,7 @@ The parent struggles to implement quite ambitious code challenges that she takes
   indicating that she is aware of the greater possibility for effective child input at this stage.
 -->
 
-
 <!-- ## Observations and analysis of use of Game Design Patterns (GDPs) by participants -->
-
-
 
 
 ## Use of GDPs in the cultural plane / community level of activity
