work on vignette 2

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -193,39 +193,42 @@ Outer pipes Cell padding
 | On the Screen: Olivia is uses the keyboard’s arrow keys to control the game player. She checks the desired behaviour of the player progressing to level 2 after collecting a key and then traveling to a door - is working. It does and Olivia  progresses to level 2 of their game where there is not a door or key. |
 
 
-### Descriptive Commentary on Vignette 2
+### Short Descriptive Commentary on Vignette 2
 
-Beyond providing the reader with an illustrative example of partner work in game coding, this commentary has a primary focus on surfacing uses of GDPs as a meditational strategy, which are then explored using wider data in the rest of the chapter.
+Beyond providing the reader with an illustrative example of partner work in game coding, this commentary has a primary focus on surfacing uses of GDPs as a meditational strategy, which are then explored using wider data in the rest of the chapter. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
 
-The child(c) Olivia uses the name of game design pattern they are working in _Keys and Doors_ is repeated in a sing song voice . She also chivvies her parent(p) Suzanna to get started on it (Key. in Vignette 2.).
+The child(c) Olivia uses the name of game design pattern they are working in _Keys and Doors_ in the process of encouraging her parent(p) Suzanna to get started on it (Key 44 in Vignette 2).
 
-There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key. in Vignette 2.).
+The key and door pattern is one of the harder ones to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
+There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction.  
 
-The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants which may have influence Olivia's interest.
+<!-- SIGNPOSTING TO DOL & OTHER ASPECTS OF GDP Use -->
 
-There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". The response of the child -  "It is for me!" - appears to show both her awareness of the conventions of game design and a desire to work against those conventions. Later the child articulate her motivation to _surprise_ players with this level design.
+
+**Skillful parental work to sustain engagement**
+
+The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The full arc of the vignette, the parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. When the code problem has been solve, she signals clearly to her child to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game.
+
+The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to a state suitable for ideation and design within the scope of the child. The completion of a coding task indicating that she is aware of the greater possibility for effective child input at this stage. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
+
+**Challenge and inititive**
+
+The child also show initiative, in particular in relation to level design.  
+
+There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". The response of the child -  "It is for me!" - appears to show both her awareness of the conventions of game design and a desire to work against those conventions. Later the child articulate her motivation to _surprise_ players with this level design.
+
+
+**Transition**
+
+The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those addressing cultural practices and interpersonal /  guided participation.
 
 
 <!--
 The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 
-SHIFT
-For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
-
-
 <!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
-
-<!-- **Guided participation:**  -->
-
-SHIFT
-The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests.
-
-SHIFT
-THIS HAPPENS BEFORE THE VIGNETTE EXTRACT.
-In the full vignette transcription included in the appendices as Vignette 2, the parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. When the code problem has been solve, she signals clearly to her child to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions.
 
 <!-- This pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard, adult facilitating and coding process responsive to the child's lead, other individuals and pairs approached the same objectives in diverse ways.  -->
 
@@ -245,20 +248,11 @@ PULL OUT AN EXAMPLE -->
 
 <!-- ADD IN APPENDIX OF MAPS - AND GDPS FOR NAVIGATIONS AND REFRAME IN THIS CHAPTER. -->
 
-<!-- NOTE - MOVE TO ANOTHER SECTIONS WITH TRIANGULATION? -->
-<!-- ### Gdp and motivation -->
-<!-- I propose that a contributing factor to this motivation is the ability to replicate a familiar pattern of game play via her own work in construction. It is the ability to translate this home knowledge into her own artefact which gives a sense of mastery over an otherwise foreign environment. -->
-<!-- The process of personal development of knowledge is less clear from video data.
-NOTE - SOME MORE READING ON AN INTERPRETATION OF THIS THAT I CAN WORK WITH FOR THIS DATA IS PERHAPS NEEDED. -->
 
 
-<!-- The child uses her concepts of game design patterns in the end of course evaluation. She responded to the question _What would you like to see next time? What would you add?_ with the comment. "Olivia: I'd add a health bar and lots more levels and keep on changing the characters and background." -->
+<!-- -->
 <!--
-#### TO INTEGRATE - Sustaining Engagement: Parental prompts aligned with ideation stages
-The parent navigates this process skilfully and is able to incorporate the child's interests.
-
-The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to ask / imagine stage. The completion of a coding task
-  indicating that she is aware of the greater possibility for effective child input at this stage.
+#### TO INTEGRATE - Sustaining Engagement:
 -->
 
 <!-- ## Observations and analysis of use of Game Design Patterns (GDPs) by participants -->
